# NUpbr

./: .gitattributes  .gitignore  .style.yapf  NUpbr.sublime-project  README.md  blender.py  grass.py  grass_field_lines.blend  pbr.blend  pbr.blend1  pbr_ball.py
depth_conversion/: CMakeLists.txt  depth_conversion.cpp
field_uv_generation/: config.py  draw_field.py  field_config.py  generate_uv.py  scene_config.py
pbr/: bonedict.json  ensure_dependencies.py  pbr.py  stat.py  util.py
pbr/config/: blend_config.py  output_config.py  scene_config.py
pbr/field_uv/: draw_field.py  generate_uv.py
pbr/scene/: ball.py  blender_object.py  camera.py  camera_anchor.py  clutter.py  darwin_robot.py  environment.py  field.py  goal.py  misc_robot.py  robot.py  shadowcatcher.py  shape.py
pbr_scene/: ball.py  blend_config.py  environment.py  field.py  goal.py  pbr_scene.py
pbr_scene/config/: scene_config.py
pbr_scene/field_uv/: generate_uv.py
pbr_scene/scene/: camera.py  camera_anchor.py  environment.py  field.py
resources/scene_hdr/hdr_001/: 001.json  001_mask.hdr  001_raw.hdr
resources/scene_hdr/hdr_002/: 002.json  002_mask.hdr  002_raw.hdr
resources/scene_hdr/hdr_003/: 003.json  003_mask.hdr  003_raw.hdr
resources/scene_hdr/hdr_004/: 004.json  004_mask.hdr  004_raw.hdr
resources/scene_hdr/hdr_005/: 005.json  005_mask.hdr  005_raw.hdr
resources/scene_hdr/hdr_006/: 006.json  006_mask.hdr  006_raw.hdr
resources/scene_hdr/hdr_007/: 007.json  (+2 more)
scene_construction/: blend_config.py  scene_construction.py
scripts/: image_curator.py  visualise_bboxes.py
(+29 files in other folders)
